# PyVideoFace

./: .gitignore  LICENSE  README.md  heh.py  main.py  pyproject.toml  requirements.txt
faces/people.mp4/: metadata_batch_0.json  metadata_batch_1.json  metadata_batch_10.json  metadata_batch_11.json  metadata_batch_12.json  metadata_batch_13.json  metadata_batch_14.json  metadata_batch_2.json  metadata_batch_3.json  metadata_batch_4.json  metadata_batch_5.json  metadata_batch_6.json  metadata_batch_7.json  metadata_batch_8.json  metadata_batch_9.json
src/videoface/: detect.py  downloadVideo.py  main.py
