[tool.poetry]
name = "videoface"
version = "1.0.0"
description = "A video processing tool for clipping out faces"
authors = ["Cash Coffman <cashcoffman3@gmail.com>"]
license = "MIT"
include = ["src"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
face-recognition = "^1.3.0"
numpy = "^2.1.2"
typer = "^0.12.5"
yt-dlp = "^2024.11.4"

[tool.poetry.scripts]
videoFace = "videoface.main:app"

